update PostgreSQL database name in docker-compose and Makefile; enhance README with CI/CD details